Edit portfolio and contact section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -68,50 +68,44 @@
 							<h2>Projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>Here are some</strong> projects I've worked on using
+              HTML, CSS and JavaScript.</p>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>Near Media</h3>
+										<p>For this project my friend wanted a portfolio website for
+                    his photography and videography work.  I used Wordpress +
+                    JupiterX theme (which uses Elementor Builder) for easy
+                    maintenance of content.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="https://www.nearmedia.cc" class="landscape"><img src="images/project02_01.png" alt="" /></a>
+											<a href="https://www.nearmedia.cc"><img
+                        src="images/project02_02.png" alt="" /></a>
+											<a href="https://www.nearmedia.cc"><img
+                        src="images/project02_03.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
 
-							<!-- Section -->
+  					  <!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>Responsive Web Design Project</h3>
+										<p>For this project we were given design files for tablet
+                    and mobile versions of the website. Demonstrates use of
+                    media queries and responsive units to make the website
+                    responsive.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="https://github.com/seongck/responsive-web-design-I" class="landscape"><img
+                        src="images/project01_01.png" alt="" /></a>
+											<a href="https://github.com/seongck/responsive-web-design-I"><img src="images/project01_02.png" alt="" /></a>
+											<a href="https://github.com/seongck/responsive-web-design-I"><img src="images/project01_03.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -119,7 +113,7 @@
 						</div>
 					</section>
 
-				<!-- Section -->
+          <!--
 					<section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
@@ -132,6 +126,7 @@
 							</ul>
 						</div>
 					</section>
+          -->
 
 				<!-- Elements -->
 				<!--
@@ -407,7 +402,8 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
+							<p><strong>Questions or comments?</strong> Feel free to send me a message!</p>
+              <br>
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -429,7 +425,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">seongk@pm.me</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
@@ -437,17 +433,15 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>1234 Somewhere Road, Everett, WA 98208</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
+										<li><a href="https://www.twitter.com/seong_ck" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.linkedin.com/in/kseongc/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/seongck" class="icon fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://codepen.io/seongck/" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
 								</li>
 							</ul>
@@ -455,7 +449,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Seong Kim. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
