Add build week project section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Seong Kim</h1>
-							<p>A full stack web developer in training.  I'm attending Lambda
+							<p>Full Stack Web Developer. WEBPT7 Cohort at Lambda
               School.<a href="https://twitter.com/seong_ck"> @seong_ck</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -40,9 +40,11 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p>Hi, I'm a full stack web developer in training. I'm currently
-              attending Lambda School - enrolled in their part-time Full Stack
-              Web Development program.</p>
+							<p>I'm a Full Stack Developer focused on new technologies,
+              user experience, and performance optimization. I have prior experience in
+              marketing working on Wordpress, SEO, design, and copywriting.
+              Additional experience working in logistics has helped develop
+              planning and collaboration skills necessary to succeed in a fast-paced, high pressure environment.</p>
 							<span class="image main"><img src="images/macbook01.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -71,6 +73,33 @@
 							<p><strong>Here are some</strong> projects I've worked on using
               HTML, CSS and JavaScript.</p>
 
+  					  <!-- Section -->
+								<section>
+									<header>
+										<h3>Build Week: Macro Calculator Website</h3>
+										<p>For this project we were paired with another student to
+                    build a responsive marketing website for a fictional app.  My
+                    partner Ace and I built the website from scratch. 
+                    Demonstrates use of responsive design, DOM manipulation, JS
+                    components and collaboration.</p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="https://github.com/bw-macro-calculator/bw-macro-calculator" class="landscape"><img
+                        src="images/macro_calc_desktop.png" alt="Photo of Macro
+                        Calculator desktop view website" /></a>
+											<a
+                        href="https://github.com/seongck/bw-macro-calculator/bw-macro-calculator"><img
+                        src="images/macro_calc_tablet.png" alt="Photo of Macro
+                        Calculator tablet view website" /></a>
+											<a
+                        href="https://github.com/seongck/bw-macro-calculator/bw-macro-calculator"><img
+                        src="images/macro_calc_mobile.png" alt="Photo of Macro
+                        Calculator mobile view website" /></a>
+										</div>
+									</div>
+								</section>
+
 							<!-- Section -->
 								<section>
 									<header>
@@ -82,11 +111,15 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://www.nearmedia.cc" class="landscape"><img src="images/project02_01.png" alt="" /></a>
+											<a href="https://www.nearmedia.cc" class="landscape"><img
+                        src="images/project02_01.png" alt="Photo of Near Media
+                        website" /></a>
 											<a href="https://www.nearmedia.cc"><img
-                        src="images/project02_02.png" alt="" /></a>
+                        src="images/project02_02.png" alt="Photo of Near Media
+                        website" /></a>
 											<a href="https://www.nearmedia.cc"><img
-                        src="images/project02_03.png" alt="" /></a>
+                        src="images/project02_03.png" alt="Photo of Near Media
+                        website" /></a>
 										</div>
 									</div>
 								</section>
@@ -433,7 +466,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Everett, WA 98208</span>
+									<span>Everett, WA 98208</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
