Edit About content

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
 						</header>
 						<div class="content">
 							<p>I'm a Full Stack Developer focused on new technologies,
-              user experience, and performance optimization. I have prior experience in
-              marketing working on Wordpress, SEO, design, and copywriting.
+              user experience, and performance optimization. I have prior
+              experience as a marketing specialist working on Wordpress, SEO, design, and copywriting.
               Additional experience working in logistics has helped develop
-              planning and collaboration skills necessary to succeed in a fast-paced, high pressure environment.</p>
+              planning and collaboration skills necessary to succeed in a
+              fast-paced, high pressure environment. I am interested in
+              combining those skills with web technologies to to help build
+              engaging and cutting-edge projects.</p>
 							<span class="image main"><img src="images/macbook01.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -81,7 +84,7 @@
                     build a responsive marketing website for a fictional app.  My
                     partner Ace and I built the website from scratch. 
                     Demonstrates use of responsive design, DOM manipulation, JS
-                    components and collaboration.</p>
+                    components and collaboration via Github.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
