Update LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
 										<li><a href="https://www.twitter.com/seong_ck" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="https://www.linkedin.com/in/kseongc/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.linkedin.com/in/seongck/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/seongck" class="icon fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="https://codepen.io/seongck/" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
