Update About Me content

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p>I'm a Full Stack Developer focused on new technologies,
-              user experience, and performance optimization. I have prior
-              experience as a marketing specialist working on Wordpress, SEO, design, and copywriting.
+							<p>I'm a Full Stack Developer focused on elegant design,
+              clean code, and high performance. I have prior
+              experience as a marketing specialist, which involved Wordpress,
+              Google Analytics, Adobe AI, and writing copy.
               Additional experience working in logistics has helped develop
               planning and collaboration skills necessary to succeed in a
               fast-paced, high pressure environment. I am interested in
