--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="intro">
 						<header>
 							<h1>Seong Kim</h1>
-							<p>Full Stack Web Developer. WEBPT7 Cohort at Lambda
+							<p>Full Stack Developer. WEBPT7 Cohort at Lambda
               School.<a href="https://twitter.com/seong_ck"> @seong_ck</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
