Update portfolio content

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta name="description" content="Seong Kim portfolio website" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+    <script defer src="https://kit.fontawesome.com/7f2b3715a0.js"></script>
 	</head>
 	<body class="is-preload">
 
@@ -40,15 +41,7 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p>I'm a Full Stack Developer focused on elegant design,
-              clean code, and high performance. I have prior
-              experience as a marketing specialist, which involved Wordpress,
-              Google Analytics, Adobe AI, and writing copy.
-              Additional experience working in logistics has helped develop
-              planning and collaboration skills necessary to succeed in a
-              fast-paced, high pressure environment. I am interested in
-              combining those skills with web technologies to to help build
-              engaging and cutting-edge projects.</p>
+							<p>Focused on elegant design, clean code, and high performance.  I am interested in combining my technical and business skills to help build engaging, cutting-edge projects that users love.</p>
 							<span class="image main"><img src="images/macbook01.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -60,10 +53,11 @@
 						</header>
 						<div class="content">
 							<ul class="feature-icons">
+                <li class="fab fa-react">React</li>
+                <li class="icon fa-code">JavaScript</li>
 								<li class="icon fa-html5">HTML5</li>
 								<li class="icon fa-css3">CSS3</li>
 								<li class="icon fa-git">Git</li>
-                <li class="icon fa-code">JavaScript</li>
 							</ul>
 						</div>
 					</section>
@@ -80,6 +74,29 @@
   					  <!-- Section -->
 								<section>
 									<header>
+										<h3>React Avengers Project</h3>
+										<p>For this project we were given JS data and CSS design
+                    files. Demonstrates use of React and React Router to
+                    create dynamic routes and use the `history` object to
+                    navigate between components.
+                    </p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="https://github.com/seongck/avengers" class="landscape"><img
+                        src="images/avengers/avengers_app_1.png" alt="Screenshot
+                        of Avengers app" /></a>
+											<a href="https://github.com/seongck/avengers"><img src="images/avengers/avengers_app_2.png" alt="Screenshot
+                        of Avengers app" /></a>
+											<a href="https://github.com/seongck/avengers"><img src="images/avengers/avengers_app_3.png" alt="Screenshot
+                        of Avengers app" /></a>
+										</div>
+									</div>
+								</section>
+
+  					  <!-- Section -->
+								<section>
+									<header>
 										<h3>Build Week: Macro Calculator Website</h3>
 										<p>For this project we were paired with another student to
                     build a responsive marketing website for a fictional app.  My
@@ -90,15 +107,15 @@
 									<div class="content">
 										<div class="gallery">
 											<a href="https://github.com/bw-macro-calculator/bw-macro-calculator" class="landscape"><img
-                        src="images/macro_calc_desktop.png" alt="Photo of Macro
+                        src="images/macro_calc/macro_calc_desktop.png" alt="Photo of Macro
                         Calculator desktop view website" /></a>
 											<a
                         href="https://github.com/seongck/bw-macro-calculator/bw-macro-calculator"><img
-                        src="images/macro_calc_tablet.png" alt="Photo of Macro
+                        src="images/macro_calc/macro_calc_tablet.png" alt="Photo of Macro
                         Calculator tablet view website" /></a>
 											<a
                         href="https://github.com/seongck/bw-macro-calculator/bw-macro-calculator"><img
-                        src="images/macro_calc_mobile.png" alt="Photo of Macro
+                        src="images/macro_calc/macro_calc_mobile.png" alt="Photo of Macro
                         Calculator mobile view website" /></a>
 										</div>
 									</div>
@@ -116,36 +133,18 @@
 									<div class="content">
 										<div class="gallery">
 											<a href="https://www.nearmedia.cc" class="landscape"><img
-                        src="images/project02_01.png" alt="Photo of Near Media
+                        src="images/near_media/01.png" alt="Photo of Near Media
                         website" /></a>
 											<a href="https://www.nearmedia.cc"><img
-                        src="images/project02_02.png" alt="Photo of Near Media
+                        src="images/near_media/02.png" alt="Photo of Near Media
                         website" /></a>
 											<a href="https://www.nearmedia.cc"><img
-                        src="images/project02_03.png" alt="Photo of Near Media
+                        src="images/near_media/03.png" alt="Photo of Near Media
                         website" /></a>
 										</div>
 									</div>
 								</section>
 
-  					  <!-- Section -->
-								<section>
-									<header>
-										<h3>Responsive Web Design Project</h3>
-										<p>For this project we were given design files for tablet
-                    and mobile versions of the website. Demonstrates use of
-                    media queries and responsive units to make the website
-                    responsive.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="https://github.com/seongck/responsive-web-design-I" class="landscape"><img
-                        src="images/project01_01.png" alt="" /></a>
-											<a href="https://github.com/seongck/responsive-web-design-I"><img src="images/project01_02.png" alt="" /></a>
-											<a href="https://github.com/seongck/responsive-web-design-I"><img src="images/project01_03.png" alt="" /></a>
-										</div>
-									</div>
-								</section>
 
 						</div>
 					</section>
