--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 						</header>
 						<div class="content">
 							<p>Focused on elegant design, clean code, and high performance.  I am interested in combining my technical and business skills to help build engaging, cutting-edge projects that users love.</p>
-							<span class="image main"><img src="images/macbook01.jpg" alt="" /></span>
+							<!--<span class="image main"><img src="images/macbook01.jpg"
+         alt="" /></span> -->
 						</div>
 					</section>
 
