Update website content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p>Focused on elegant design, clean code, and high performance.  I am interested in combining my technical and business skills to help build engaging, cutting-edge projects that users love.</p>
+							<p>Full stack developer focused on user-centric product
+              development.  I'm excited to bring my technical, creative and
+              collaborative skills to an agile and ambitious team.</p>
 							<!--<span class="image main"><img src="images/macbook01.jpg"
          alt="" /></span> -->
 						</div>
@@ -69,28 +71,57 @@
 							<h2>Projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Here are some</strong> projects I've worked on using
-              HTML, CSS and JavaScript.</p>
+							<p><strong>Here are some</strong> projects I've worked on
+              showcasing React, JavaScript and Responsive design skills.</p>
 
   					  <!-- Section -->
 								<section>
 									<header>
-										<h3>React Avengers Project</h3>
-										<p>For this project we were given JS data and CSS design
-                    files. Demonstrates use of React and React Router to
-                    create dynamic routes and use the `history` object to
-                    navigate between components.
+										<h3>TSTUFF</h3>
+										<p>An app for tech enthusiasts to rent or rent out tech
+                    equipment.  My partner Julian and I built the app in two
+                    weeks starting with Create React App and Semantic-UI.  Demonstrates
+                    use of React, React Router, async requests (w/ axios), form
+                    handling, authentication, and basic CRUD functionality.
                     </p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://github.com/seongck/avengers" class="landscape"><img
-                        src="images/avengers/avengers_app_1.png" alt="Screenshot
-                        of Avengers app" /></a>
-											<a href="https://github.com/seongck/avengers"><img src="images/avengers/avengers_app_2.png" alt="Screenshot
-                        of Avengers app" /></a>
-											<a href="https://github.com/seongck/avengers"><img src="images/avengers/avengers_app_3.png" alt="Screenshot
-                        of Avengers app" /></a>
+											<a href="https://github.com/bw-use-my-tech-stuff/Front-End" class="landscape"><img
+                        src="images/tstuff/home.png" alt="Screenshot
+                        of TSTUFF app" /></a>
+											<a
+                      href="https://github.com/bw-use-my-tech-stuff/Front-End"><img
+                      src="images/tstuff/dashboard.png" alt="Screenshot
+                        of TSTUFF app" /></a>
+											<a
+                      href="https://github.com/bw-use-my-tech-stuff/Front-End"><img
+                      src="images/tstuff/listitem.png" alt="Screenshot
+                        of TSTUFF app" /></a>
+										</div>
+									</div>
+								</section>
+
+							<!-- Section -->
+								<section>
+									<header>
+										<h3>Budget Board</h3>
+										<p>A budget/finance app where you can add income & expense
+                    categories with individual items and see them rendered on a
+                    graph. Leverages Chrome Storage Sync so that you can pull up
+                    your budget by signing into Google Chrome from any device that supports extensions. Currently has 1200+ users. </p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="https://github.com/seongck/geckos-08" class="landscape"><img
+                        src="images/budgetboard/main.png" alt="Photo of Budget
+                             Board App" /></a>
+											<a href="https://github.com/seongck/geckos-08"><img
+                        src="images/budgetboard/delete.png" alt="Photo of Budget
+                             Board App" /></a>
+											<a href="https://github.com/seongck/geckos-08"><img
+                        src="images/budgetboard/category.png" alt="Photo of Budget
+                             Board App" /></a>
 										</div>
 									</div>
 								</section>
@@ -99,10 +130,9 @@
 								<section>
 									<header>
 										<h3>Build Week: Macro Calculator Website</h3>
-										<p>For this project we were paired with another student to
-                    build a responsive marketing website for a fictional app.  My
-                    partner Ace and I built the website from scratch. 
-                    Demonstrates use of responsive design, DOM manipulation, JS
+										<p>A responsive marketing website for a fictional macro
+                    calculator app.  My partner Ace and I built the website from scratch in less
+                    than two weeks. Demonstrates use of responsive design, DOM manipulation, JS
                     components and collaboration via Github.</p>
 									</header>
 									<div class="content">
@@ -121,31 +151,6 @@
 										</div>
 									</div>
 								</section>
-
-							<!-- Section -->
-								<section>
-									<header>
-										<h3>Near Media</h3>
-										<p>For this project my friend wanted a portfolio website for
-                    his photography and videography work.  I used Wordpress +
-                    JupiterX theme (which uses Elementor Builder) for easy
-                    maintenance of content.</p>
-									</header>
-									<div class="content">
-										<div class="gallery">
-											<a href="https://www.nearmedia.cc" class="landscape"><img
-                        src="images/near_media/01.png" alt="Photo of Near Media
-                        website" /></a>
-											<a href="https://www.nearmedia.cc"><img
-                        src="images/near_media/02.png" alt="Photo of Near Media
-                        website" /></a>
-											<a href="https://www.nearmedia.cc"><img
-                        src="images/near_media/03.png" alt="Photo of Near Media
-                        website" /></a>
-										</div>
-									</div>
-								</section>
-
 
 						</div>
 					</section>
@@ -466,7 +471,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(360) 689-6681</a>
 								</li>
 								<li>
 									<h3>Address</h3>
@@ -478,7 +483,6 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 										<li><a href="https://www.twitter.com/seong_ck" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.linkedin.com/in/seongck/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/seongck" class="icon fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="https://codepen.io/seongck/" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
 								</li>
 							</ul>
