Update TSTUFF app description

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 										<h3>TSTUFF</h3>
 										<p>An app for tech enthusiasts to rent or rent out tech
                     equipment.  My partner Julian and I built the app in two
-                    weeks starting with Create React App and Semantic-UI.  Demonstrates
+                    weeks starting with CRA boilerplate and Semantic-UI
+                    components.  Demonstrates
                     use of React, React Router, async requests (w/ axios), form
                     handling, authentication, and basic CRUD functionality.
                     </p>
