Edit Macro Calculator header

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   					  <!-- Section -->
 								<section>
 									<header>
-										<h3>Build Week: Macro Calculator Website</h3>
+										<h3>Macro Calculator Website</h3>
 										<p>A responsive marketing website for a fictional macro
                     calculator app.  My partner Ace and I built the website from scratch in less
                     than two weeks. Demonstrates use of responsive design, DOM manipulation, JS
