Add form name attr

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						<div class="content">
 							<p><strong>Questions or comments?</strong> Feel free to send me a message!</p>
               <br>
-							<form netlify>
+							<form name="contact" netlify>
 								<div class="fields">
 									<div class="field half">
 										<input type="text" name="name" id="name" placeholder="Name" />
