Add Github Jobs project and update icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="description" content="Seong Kim portfolio website" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-    <script defer src="https://kit.fontawesome.com/7f2b3715a0.js"></script>
+    <script defer src="https://kit.fontawesome.com/7f2b3715a0.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -41,8 +41,8 @@
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p>Full stack developer focused on user-centric product
-              development.  I'm excited to bring my technical, creative and
+							<p>Full Stack Developer devoted to building fast, reliable,
+              user-centric software products.  I'm excited to bring my technical, creative and
               collaborative skills to an agile and ambitious team.</p>
 							<!--<span class="image main"><img src="images/macbook01.jpg"
          alt="" /></span> -->
@@ -55,6 +55,7 @@
 							<h2>Skills / Technologies</h2>
 						</header>
 						<div class="content">
+              <!--
 							<ul class="feature-icons">
                 <li class="fab fa-react">React</li>
                 <li class="icon fa-code">JavaScript</li>
@@ -62,6 +63,34 @@
 								<li class="icon fa-css3">CSS3</li>
 								<li class="icon fa-git">Git</li>
 							</ul>
+              -->
+              <div class="skills">
+                <div class="skill">
+                  <i class="fab fa-react fa-2x"></i>
+                  <span class="skill-desc">React</span>
+                </div>
+                <div class="skill">
+                  <i class="fas fa-code fa-1x"></i>
+                  <span class="skill-desc">Redux</span>
+                </div>
+                <div class="skill">
+                  <i class="fab fa-js-square fa-2x"></i>
+                  <span class="skill-desc">JavaScript</span>
+                </div>
+                <div class="skill">
+                  <i class="fab fa-html5 fa-2x"></i>
+                  <span class="skill-desc">HTML5</span>
+                </div>
+               <div class="skill">
+                  <i class="fab fa-css3-alt fa-2x"></i>
+                  <span class="skill-desc">CSS3</span>
+                </div>
+               <div class="skill">
+                  <i class="fab fa-git-alt fa-2x"></i>
+                  <span class="skill-desc">Git</span>
+                </div>
+
+              </div>
 						</div>
 					</section>
 
@@ -71,8 +100,9 @@
 							<h2>Projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Here are some</strong> projects I've worked on
-              showcasing React, JavaScript and Responsive design skills.</p>
+              <p>Projects I've worked on
+              demonstrating <strong>React</strong>, <strong>Redux</strong>, and
+              <strong>JavaScript</strong> skills.
 
   					  <!-- Section -->
 								<section>
@@ -102,6 +132,34 @@
 										</div>
 									</div>
 								</section>
+
+  					  <!-- Section -->
+								<section>
+									<header>
+										<h3>Github Jobs</h3>
+										<p>An app that fetches and renders a list of software jobs
+                    from the Github API. Boilerplate set up with
+                    `create-react-app`. Demonstrates
+                    use of React, React hooks, Redux, async requests (w/ axios), and
+                    styled-components.</p>
+									</header>
+									<div class="content">
+										<div class="gallery">
+											<a href="https://react-redux-app-git-unnest.seongk.now.sh/" class="landscape"><img
+                        src="images/github_jobs/desktop.png" alt="Screenshot
+                        of Github Jobs app" /></a>
+											<a
+                      href="https://react-redux-app-git-unnest.seongk.now.sh/"><img
+                      src="images/github_jobs/mobile.png" alt="Screenshot
+                        of Github Jobs app" /></a>
+											<a
+                      href="https://github.com/seongck/React-Redux-App/tree/unnest"><img
+                      src="images/github_jobs/code.png" alt="Screenshot
+                        of Github Jobs app" /></a>
+										</div>
+									</div>
+								</section>
+
 
 							<!-- Section -->
 								<section>
