--- a/index.html
+++ b/index.html
@@ -530,11 +530,11 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(360) 689-6681</a>
+									<a href="#">Send me an email or message</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>Everett, WA 98208</span>
+									<span>Everett, WA</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
