Update first name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Seong Kim Portfolio</title>
+		<title>Jack Kim Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Seong Kim portfolio website" />
@@ -22,7 +22,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Seong Kim</h1>
+							<h1>Jack Kim</h1>
 							<p>Full Stack Developer. WEBPT7 Cohort at Lambda
               School.<a href="https://twitter.com/seong_ck"> @seong_ck</a></p>
 							<ul class="actions">
